TΔ1b `brews` 도메인 도입